fix problem found with static analisi